<resources>
    <string name="app_name">EP_V1_SDK</string>
    <string name="enter_details">Enter following details.</string>
    <string name="enter_details_ma">You can pay by entering Mobile account details</string>
    <string name="otc_pay_now_instruction">There are no extra charges for paying an Easypaisa Token</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="emailID">Email ID</string>
    <string name="voucher">Have a Voucher?</string>
    <string name="pay_now">Pay Now</string>
    <string name="easypaisa_wallet">Easypaisa Wallet</string>
    <string name="ordersummary">Order Summary</string>
    <string name="orderID">Order Id</string>
    <string name="storeName">Store Name</string>
    <string name="total">Total</string>
    <string name="rs">Rs.</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="awesome">Awesome!</string>
    <string name="successPayment">Your payment has been made!</string>
    <string name="paymentSummary">Payment Summary</string>
    <string name="pkr">PKR</string>
    <string name="transactionId">Transaction Id</string>
    <string name="satisfied">How satisfied are you with EasyPaisa?</string>
    <string name="extreamly">Extremely</string>
    <string name="somewhat">Somewhat</string>
    <string name="notatall">Not at all</string>
    <string name="contribute">Contribute to </string>
    <string name="pkr100">PKR \n 100</string>
    <string name="pkr200">PKR \n 200</string>
    <string name="pkr300">PKR \n 300</string>
    <string name="donate">Donate</string>
    <string name="bank">Select Bank Account</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="cnic">CNIC</string>
    <string name="accountNumber">Account Number</string>
    <string name="onno">Oh no!</string>
    <string name="failurePayment">Your payment was not successful!</string>
    <string name="invalidNumber">Invalid mobile number</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="submit">Submit</string>
    <string name="writefeedback">Write a Feedback</string>
    <string name="invalidCard">Invalid card number</string>
    <string name="invalidMonth">Invalid Month</string>
    <string name="invalidYear">Invalid Year</string>
    <string name="invalidExpDate">Invalid expiry date</string>
    <string name="invalidCVV">Invalid CVV</string>
    <string name="invalidAccount">Invalid account number</string>
    <string name="invalidCNIC">Invalid cnic number</string>
    <string name="selectBank">Select Bank</string>
    <string name="selectPayment">Select Payment</string>
    <string name="pleaseNoteToken">Please note your Token Number :</string>
    <string name="tokenwillexpire">\u0020 Your token will expire on\u0020</string>
    <string name="pleasevisit">\u0020 Please visit your nearest Easypaisa shop and provide your Token Number to pay the total amount of Rs.</string>
    <string name="againstorder">\u0020 against your Order ID\u0020</string>
    <string name="beforeexpiry"> \u0020 before the expiry date/time.</string>
    <string name="walletnumber">Wallet Number</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="pkrconfirm"><![CDATA[PKR <> are about to be donated to <Charity Name> from your Easypaisa Mobile Account <>. Click Ok to confirm.]]></string>
    <string name="thankyou">Thank you for your donation! The payment was completed successfully.</string>
    <string name="close">Close</string>
    <string name="otpsent">OTP Sent!</string>
    <string name="enterOtp">Enter OTP!</string>
    <string name="successOTP">Your OTP is sent to your number</string>
    <string name="successOtp">Your One-Time Password (OTP) has been sent to your registered mobile number with your bank account. In case you don\'t receive OTP please click resend.</string>
    <string name="enterCode">Enter code</string>
    <string name="resendotp">Resend OTP</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="visa_master_card_txt">VISA/MasterCard</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_one">1:An Easypaisa Token Number will be issued when you click \'Pay Securely\'- you will aslo receive the token via SMS and E-mail.</string>
    <string name="instruction_two">2:You can pay the Easypaisa Token at your nearest Telenor Sale &amp; Service Center, Franchise, or Easypaisa Agent/Retailer.</string>
    <string name="instruction_three">3:There are no extra charges for paying an Easypaisa Token.</string>
    <string name="ma_mobile_hint">Please enter your Easypaisa Mobile Account Number</string>
    <string name="ma_email_hint">Please enter your Email address</string>
    <string name="otc_mobile_hint">Please enter your Mobile number</string>
    <string name="otc_email_hint">Please enter your Email ID</string>
    <string name="dd_mobile_hint">Kindly enter mobile number associated with your bank account</string>
    <string name="dd_email_hint">Enter your Email ID</string>
    <string name="transactionNumber">Transaction Number</string>
    <string name="operation_not_allowed">This operation is not allowed because a transaction is in process.</string>
    <string name="cc_mobile_hint">Please enter your Mobile number</string>
    <string name="cc_email_hint">Please enter your Email ID</string>
    <string name="cc_card_number_hint">Please enter your 16 digit Card number</string>
    <string name="cc_cvv_hint">Please enter the 3 digit code printed on the back of your card</string>
</resources>
