<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_height="match_parent" android:layout_width="match_parent"
android:gravity="center">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/ll_top_view"/>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bggrey"
            android:layout_weight="1">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_50sdp"
            android:orientation="vertical">

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@drawable/line_green"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/payment_status_bg"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/imgIcon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_success"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_gravity="center"/>


                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/titleStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_1sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            style="@style/selectedText"
                            android:text="@string/enterOtp"
                            android:paddingTop="@dimen/_5sdp"
                            android:textSize="@dimen/_14ssp"/>

                    <TextView
                            android:id="@+id/paymentStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            style="@style/unselectedText"
                            android:text="@string/successOtp"
                            android:paddingTop="@dimen/_1sdp"
                            android:textSize="@dimen/_12ssp"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ll_payment">

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:background="@drawable/line_light_grey"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"/>

                <TextView
                        android:id="@+id/titleSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_1sdp"
                        android:textAlignment="center"
                        style="@style/unselectedText"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:text="@string/enterCode"
                        android:paddingTop="@dimen/_5sdp"
                        android:textSize="@dimen/_11ssp"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_30sdp">


                    <EditText
                            android:id="@+id/editTextone"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:gravity="center"
                            android:layout_marginEnd="@dimen/_18sdp"
                            android:background="@drawable/otp_item_bg"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:maxLength="1">

                        <requestFocus/>
                    </EditText>


                    <EditText
                            android:id="@+id/editTexttwo"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:gravity="center"
                            android:layout_marginEnd="@dimen/_18sdp"
                            android:background="@drawable/otp_item_bg"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:maxLength="1"/>

                    <EditText
                            android:id="@+id/editTextthree"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:gravity="center"
                            android:layout_marginEnd="@dimen/_18sdp"
                            android:background="@drawable/otp_item_bg"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:maxLength="1"/>

                    <EditText
                            android:id="@+id/editTextfour"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:gravity="center"
                            android:background="@drawable/otp_item_bg"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:maxLength="1"/>


                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        >
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:layout_alignParentStart="true"
                        >


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_1sdp"
                            android:textAlignment="center"
                            style="@style/unselectedText"
                            android:layout_gravity="end"
                            android:text="Didn't receive OTP? click resend in "
                            android:paddingTop="@dimen/_5sdp"
                            android:textSize="@dimen/_10ssp"/>

                    <TextView
                            android:id="@+id/tv_timer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_1sdp"
                            android:textAlignment="center"
                            style="@style/selectedText"
                            android:layout_gravity="end"
                            android:text=""
                            android:paddingTop="@dimen/_5sdp"
                            android:textSize="@dimen/_11ssp"/>

                </LinearLayout>
                <TextView
                        android:id="@+id/tv_resendOTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_1sdp"
                        android:textAlignment="center"
                        style="@style/unselectedText"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:text="@string/resend"
                        android:paddingTop="@dimen/_5sdp"
                        android:textSize="@dimen/_11ssp"/>

                </RelativeLayout>
                <Button
                        android:id="@+id/buttonPay_dd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/button_green"
                        android:text="@string/submit"
                        android:textSize="@dimen/_13ssp"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:textColor="@color/white"
                        />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




    </ScrollView>
    <include layout="@layout/ll_bottom_view"/>
</LinearLayout>

<ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/green"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>