<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@drawable/line_green"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_child_ma"
                android:orientation="vertical"
                android:visibility="visible"
                android:paddingBottom="@dimen/_200sdp"
                android:background="@drawable/child_container_bg">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imgIcon_ma"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_ma_active_new"
                            android:layout_gravity="center"/>

                    <TextView
                            android:id="@+id/listTitle_ma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:textSize="@dimen/_13ssp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:paddingEnd="?android:attr/expandableListPreferredItemPaddingLeft"
                            android:paddingTop="@dimen/_5sdp"
                            style="@style/selectedText"/>

                    <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/easypaisa_logo"
                            android:layout_gravity="center"/>

                    <ImageView
                            android:id="@+id/imgArrow_ma"
                            android:layout_width="@dimen/_12sdp"
                            android:layout_height="@dimen/_7sdp"
                            android:scaleType="fitCenter"
                            android:scaleY="-1"
                            android:visibility="gone"
                            android:src="@drawable/ic_down_arrow"
                            android:layout_gravity="center"/>


                </LinearLayout>

                <TextView
                        android:id="@+id/headTitle_ma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:text="@string/enter_details_ma"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="#788995"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_height="@dimen/_2sdp"
                        android:background="@drawable/line_grey"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                <!--Pehly wala kaaam-->
                <!--<TextView
                        android:id="@+id/tvMobleTitle_ma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/mobile_number"
                        android:textSize="@dimen/_12ssp"
                        android:drawableEnd="@drawable/ic_info_grey"
                        android:drawablePadding="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textColor="#788995"/>-->
                <!--For new wala kaaam start -->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_5sdp">

                    <TextView
                            android:id="@+id/tvMobleTitle_ma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:text="@string/mobile_number"
                            android:textSize="@dimen/_12ssp"
                            android:textColor="#788995"/>

                    <ImageView
                            android:id="@+id/ivMobileTitle_ma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_info_grey"
                            android:padding="@dimen/_5sdp"
                            />
                </LinearLayout>

                <!--For new wala kaaam end-->

                <!-- <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="03XX - XXX - XXX"
                         android:paddingStart="@dimen/_15sdp"
                         android:paddingTop="@dimen/_10sdp"
                         android:paddingEnd="@dimen/_15sdp"
                         android:id="@+id/ed_mobile_ma"
                         android:digits="01234567890+-"
                         android:maxLength="13"
                         android:paddingBottom="@dimen/_10ssp"
                         android:textSize="@dimen/_12ssp"
                         android:background="@drawable/edittext_bg"
                         />-->


                <telenor.com.ep_v1_sdk.util.MaskEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_15sdp"
                        android:hint="03XX - XXX - XXX"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:id="@+id/ed_mobile_ma"
                        android:digits="01234567890+-"
                        android:inputType="number"
                        android:maxLength="13"
                        android:paddingBottom="@dimen/_10ssp"
                        android:textSize="@dimen/_12ssp"
                        android:background="@drawable/edittext_bg"
                        app:met_mask="####-###-####"/>


                <TextView
                        android:id="@+id/tv_error_ed_mobile_ma"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_15sdp"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/red"
                        />
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp">

                <TextView
                        android:id="@+id/tvEmailTitle_ma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/emailID"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="#788995"/>

                    <ImageView
                            android:id="@+id/ivEmailTitle_ma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_info_grey"
                            android:padding="@dimen/_5sdp"
                            />
                </LinearLayout>
                <telenor.com.ep_v1_sdk.util.MenuHidingEditText
                        android:id="@+id/ed_email_ma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="abc@xyz.com"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_10ssp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edittext_bg"
                        />

                <TextView
                        android:id="@+id/tv_error_ed_email_ma"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_15sdp"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/red"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">


                <Button
                        android:id="@+id/buttonPay_ma"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/button_green"
                        android:text="@string/pay_now"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>